syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList
    2        | error ExtDefList

    3 ExtDefList: ExtDef ExtDefList
    4           | %empty
    5           | ExtDef error ExtDefList

    6 ExtDef: Specifier ExtDecList SEMI
    7       | Specifier SEMI
    8       | Specifier FunDec CompSt
    9       | error FunDec CompSt

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT OptTag LC error DefList RC
   16                | STRUCT Tag

   17 OptTag: ID
   18       | %empty

   19 Tag: ID

   20 VarDec: ID
   21       | VarDec LB INT RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP
   24       | ID LP error RP
   25       | ID LP
   26       | ID RP

   27 VarList: ParamDec COMMA VarList
   28        | ParamDec

   29 ParamDec: Specifier VarDec

   30 CompSt: LC DefList StmtList RC
   31       | LC error DefList StmtList RC

   32 StmtList: Stmt StmtList
   33         | %empty
   34         | Stmt error StmtList

   35 Stmt: Exp SEMI
   36     | CompSt
   37     | RETURN Exp SEMI
   38     | IF LP Exp RP Stmt
   39     | IF LP Exp RP Stmt ELSE Stmt
   40     | WHILE LP Exp RP Stmt
   41     | Exp error

   42 DefList: Def DefList
   43        | %empty
   44        | Def error DefList

   45 Def: Specifier DecList SEMI

   46 DecList: Dec
   47        | Dec COMMA DecList

   48 Dec: VarDec
   49    | VarDec ASSIGNOP Exp

   50 Exp: Exp ASSIGNOP Exp
   51    | Exp AND Exp
   52    | Exp OR Exp
   53    | Exp RELOP Exp
   54    | Exp PLUS Exp
   55    | Exp MINUS Exp
   56    | Exp STAR Exp
   57    | Exp DIV Exp
   58    | LP Exp RP
   59    | MINUS Exp
   60    | NOT Exp
   61    | ID LP Args RP
   62    | ID LP RP
   63    | Exp LB Exp RB
   64    | Exp DOT ID
   65    | ID
   66    | INT
   67    | FLOAT

   68 Args: Exp COMMA Args
   69     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 2 5 9 15 24 31 34 41 44
INT (258) 21 66
FLOAT (259) 67
ID (260) 17 19 20 22 23 24 25 26 61 62 64 65
PLUS (261) 54
MINUS (262) 55 59
STAR (263) 56
DIV (264) 57
AND (265) 51
OR (266) 52
NOT (267) 60
ASSIGNOP (268) 49 50
RELOP (269) 53
SEMI (270) 6 7 35 37 45
COMMA (271) 11 27 47 68
DOT (272) 64
LP (273) 22 23 24 25 38 39 40 58 61 62
RP (274) 22 23 24 26 38 39 40 58 61 62
LB (275) 21 63
RB (276) 21 63
LC (277) 14 15 30 31
RC (278) 14 15 30 31
IF (279) 38 39
ELSE (280) 39
WHILE (281) 40
STRUCT (282) 14 15 16
RETURN (283) 37
TYPE (284) 12
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1 2, on right: 0
ExtDefList (33)
    on left: 3 4 5, on right: 1 2 3 5
ExtDef (34)
    on left: 6 7 8 9, on right: 3 5
ExtDecList (35)
    on left: 10 11, on right: 6 11
Specifier (36)
    on left: 12 13, on right: 6 7 8 29 45
StructSpecifier (37)
    on left: 14 15 16, on right: 13
OptTag (38)
    on left: 17 18, on right: 14 15
Tag (39)
    on left: 19, on right: 16
VarDec (40)
    on left: 20 21, on right: 10 11 21 29 48 49
FunDec (41)
    on left: 22 23 24 25 26, on right: 8 9
VarList (42)
    on left: 27 28, on right: 22 27
ParamDec (43)
    on left: 29, on right: 27 28
CompSt (44)
    on left: 30 31, on right: 8 9 36
StmtList (45)
    on left: 32 33 34, on right: 30 31 32 34
Stmt (46)
    on left: 35 36 37 38 39 40 41, on right: 32 34 38 39 40
DefList (47)
    on left: 42 43 44, on right: 14 15 30 31 42 44
Def (48)
    on left: 45, on right: 42 44
DecList (49)
    on left: 46 47, on right: 45 47
Dec (50)
    on left: 48 49, on right: 46 47
Exp (51)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67,
    on right: 35 37 38 39 40 41 49 50 51 52 53 54 55 56 57 58 59 60
    63 64 68 69
Args (52)
    on left: 68 69, on right: 61 68


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 4 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    2 Program: error . ExtDefList
    9 ExtDef: error . FunDec CompSt

    error   shift, and go to state 9
    ID      shift, and go to state 10
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 4 (ExtDefList)

    ExtDefList       go to state 11
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8
    FunDec           go to state 12


State 2

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . OptTag LC error DefList RC
   16                | STRUCT . Tag

    ID  shift, and go to state 13

    $default  reduce using rule 18 (OptTag)

    OptTag  go to state 14
    Tag     go to state 15


State 3

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 16


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    3 ExtDefList: ExtDef . ExtDefList
    5           | ExtDef . error ExtDefList

    error   shift, and go to state 17
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 4 (ExtDefList)

    ExtDefList       go to state 18
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    6 ExtDef: Specifier . ExtDecList SEMI
    7       | Specifier . SEMI
    8       | Specifier . FunDec CompSt

    ID    shift, and go to state 19
    SEMI  shift, and go to state 20

    ExtDecList  go to state 21
    VarDec      go to state 22
    FunDec      go to state 23


State 8

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 9

    9 ExtDef: error . FunDec CompSt

    ID  shift, and go to state 10

    FunDec  go to state 12


State 10

   22 FunDec: ID . LP VarList RP
   23       | ID . LP RP
   24       | ID . LP error RP
   25       | ID . LP
   26       | ID . RP

    LP  shift, and go to state 24
    RP  shift, and go to state 25


State 11

    2 Program: error ExtDefList .

    $default  reduce using rule 2 (Program)


State 12

    9 ExtDef: error FunDec . CompSt

    LC  shift, and go to state 26

    CompSt  go to state 27


State 13

   17 OptTag: ID .
   19 Tag: ID .

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 19 (Tag)


State 14

   14 StructSpecifier: STRUCT OptTag . LC DefList RC
   15                | STRUCT OptTag . LC error DefList RC

    LC  shift, and go to state 28


State 15

   16 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 16 (StructSpecifier)


State 16

    0 $accept: Program $end .

    $default  accept


State 17

    5 ExtDefList: ExtDef error . ExtDefList
    9 ExtDef: error . FunDec CompSt

    error   shift, and go to state 9
    ID      shift, and go to state 10
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 4 (ExtDefList)

    ExtDefList       go to state 29
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8
    FunDec           go to state 12


State 18

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 19

   20 VarDec: ID .
   22 FunDec: ID . LP VarList RP
   23       | ID . LP RP
   24       | ID . LP error RP
   25       | ID . LP
   26       | ID . RP

    LP  shift, and go to state 24
    RP  shift, and go to state 25

    $default  reduce using rule 20 (VarDec)


State 20

    7 ExtDef: Specifier SEMI .

    $default  reduce using rule 7 (ExtDef)


State 21

    6 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 30


State 22

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   21 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 31
    LB     shift, and go to state 32

    $default  reduce using rule 10 (ExtDecList)


State 23

    8 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 26

    CompSt  go to state 33


State 24

   22 FunDec: ID LP . VarList RP
   23       | ID LP . RP
   24       | ID LP . error RP
   25       | ID LP .

    error   shift, and go to state 34
    RP      shift, and go to state 35
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    LC  reduce using rule 25 (FunDec)

    Specifier        go to state 36
    StructSpecifier  go to state 8
    VarList          go to state 37
    ParamDec         go to state 38


State 25

   26 FunDec: ID RP .

    $default  reduce using rule 26 (FunDec)


State 26

   30 CompSt: LC . DefList StmtList RC
   31       | LC . error DefList StmtList RC

    error   shift, and go to state 39
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    INT     reduce using rule 43 (DefList)
    FLOAT   reduce using rule 43 (DefList)
    ID      reduce using rule 43 (DefList)
    MINUS   reduce using rule 43 (DefList)
    NOT     reduce using rule 43 (DefList)
    LP      reduce using rule 43 (DefList)
    LC      reduce using rule 43 (DefList)
    RC      reduce using rule 43 (DefList)
    IF      reduce using rule 43 (DefList)
    WHILE   reduce using rule 43 (DefList)
    RETURN  reduce using rule 43 (DefList)

    Specifier        go to state 40
    StructSpecifier  go to state 8
    DefList          go to state 41
    Def              go to state 42


State 27

    9 ExtDef: error FunDec CompSt .

    $default  reduce using rule 9 (ExtDef)


State 28

   14 StructSpecifier: STRUCT OptTag LC . DefList RC
   15                | STRUCT OptTag LC . error DefList RC

    error   shift, and go to state 43
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    RC  reduce using rule 43 (DefList)

    Specifier        go to state 40
    StructSpecifier  go to state 8
    DefList          go to state 44
    Def              go to state 42


State 29

    5 ExtDefList: ExtDef error ExtDefList .

    $default  reduce using rule 5 (ExtDefList)


State 30

    6 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 6 (ExtDef)


State 31

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 45

    ExtDecList  go to state 46
    VarDec      go to state 22


State 32

   21 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 47


State 33

    8 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 8 (ExtDef)


State 34

   24 FunDec: ID LP error . RP

    RP  shift, and go to state 48


State 35

   23 FunDec: ID LP RP .

    $default  reduce using rule 23 (FunDec)


State 36

   29 ParamDec: Specifier . VarDec

    ID  shift, and go to state 45

    VarDec  go to state 49


State 37

   22 FunDec: ID LP VarList . RP

    RP  shift, and go to state 50


State 38

   27 VarList: ParamDec . COMMA VarList
   28        | ParamDec .

    COMMA  shift, and go to state 51

    $default  reduce using rule 28 (VarList)


State 39

   31 CompSt: LC error . DefList StmtList RC

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 40
    StructSpecifier  go to state 8
    DefList          go to state 52
    Def              go to state 42


State 40

   45 Def: Specifier . DecList SEMI

    ID  shift, and go to state 45

    VarDec   go to state 53
    DecList  go to state 54
    Dec      go to state 55


State 41

   30 CompSt: LC DefList . StmtList RC

    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    ID      shift, and go to state 58
    MINUS   shift, and go to state 59
    NOT     shift, and go to state 60
    LP      shift, and go to state 61
    LC      shift, and go to state 26
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63
    RETURN  shift, and go to state 64

    $default  reduce using rule 33 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 66
    Stmt      go to state 67
    Exp       go to state 68


State 42

   42 DefList: Def . DefList
   44        | Def . error DefList

    error   shift, and go to state 69
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    INT     reduce using rule 43 (DefList)
    FLOAT   reduce using rule 43 (DefList)
    ID      reduce using rule 43 (DefList)
    MINUS   reduce using rule 43 (DefList)
    NOT     reduce using rule 43 (DefList)
    LP      reduce using rule 43 (DefList)
    LC      reduce using rule 43 (DefList)
    RC      reduce using rule 43 (DefList)
    IF      reduce using rule 43 (DefList)
    WHILE   reduce using rule 43 (DefList)
    RETURN  reduce using rule 43 (DefList)

    Specifier        go to state 40
    StructSpecifier  go to state 8
    DefList          go to state 70
    Def              go to state 42


State 43

   15 StructSpecifier: STRUCT OptTag LC error . DefList RC

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 40
    StructSpecifier  go to state 8
    DefList          go to state 71
    Def              go to state 42


State 44

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 72


State 45

   20 VarDec: ID .

    $default  reduce using rule 20 (VarDec)


State 46

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 47

   21 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 73


State 48

   24 FunDec: ID LP error RP .

    $default  reduce using rule 24 (FunDec)


State 49

   21 VarDec: VarDec . LB INT RB
   29 ParamDec: Specifier VarDec .

    LB  shift, and go to state 32

    $default  reduce using rule 29 (ParamDec)


State 50

   22 FunDec: ID LP VarList RP .

    $default  reduce using rule 22 (FunDec)


State 51

   27 VarList: ParamDec COMMA . VarList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 36
    StructSpecifier  go to state 8
    VarList          go to state 74
    ParamDec         go to state 38


State 52

   31 CompSt: LC error DefList . StmtList RC

    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    ID      shift, and go to state 58
    MINUS   shift, and go to state 59
    NOT     shift, and go to state 60
    LP      shift, and go to state 61
    LC      shift, and go to state 26
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63
    RETURN  shift, and go to state 64

    $default  reduce using rule 33 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 75
    Stmt      go to state 67
    Exp       go to state 68


State 53

   21 VarDec: VarDec . LB INT RB
   48 Dec: VarDec .
   49    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 76
    LB        shift, and go to state 32

    $default  reduce using rule 48 (Dec)


State 54

   45 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 77


State 55

   46 DecList: Dec .
   47        | Dec . COMMA DecList

    COMMA  shift, and go to state 78

    $default  reduce using rule 46 (DecList)


State 56

   66 Exp: INT .

    $default  reduce using rule 66 (Exp)


State 57

   67 Exp: FLOAT .

    $default  reduce using rule 67 (Exp)


State 58

   61 Exp: ID . LP Args RP
   62    | ID . LP RP
   65    | ID .

    LP  shift, and go to state 79

    $default  reduce using rule 65 (Exp)


State 59

   59 Exp: MINUS . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 80


State 60

   60 Exp: NOT . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 81


State 61

   58 Exp: LP . Exp RP

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 82


State 62

   38 Stmt: IF . LP Exp RP Stmt
   39     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 83


State 63

   40 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 84


State 64

   37 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 85


State 65

   36 Stmt: CompSt .

    $default  reduce using rule 36 (Stmt)


State 66

   30 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 86


State 67

   32 StmtList: Stmt . StmtList
   34         | Stmt . error StmtList

    error   shift, and go to state 87
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    ID      shift, and go to state 58
    MINUS   shift, and go to state 59
    NOT     shift, and go to state 60
    LP      shift, and go to state 61
    LC      shift, and go to state 26
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63
    RETURN  shift, and go to state 64

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 88
    Stmt      go to state 67
    Exp       go to state 68


State 68

   35 Stmt: Exp . SEMI
   41     | Exp . error
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    error     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    ASSIGNOP  shift, and go to state 96
    RELOP     shift, and go to state 97
    SEMI      shift, and go to state 98
    DOT       shift, and go to state 99
    LB        shift, and go to state 100


State 69

   44 DefList: Def error . DefList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 40
    StructSpecifier  go to state 8
    DefList          go to state 101
    Def              go to state 42


State 70

   42 DefList: Def DefList .

    $default  reduce using rule 42 (DefList)


State 71

   15 StructSpecifier: STRUCT OptTag LC error DefList . RC

    RC  shift, and go to state 102


State 72

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 73

   21 VarDec: VarDec LB INT RB .

    $default  reduce using rule 21 (VarDec)


State 74

   27 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 27 (VarList)


State 75

   31 CompSt: LC error DefList StmtList . RC

    RC  shift, and go to state 103


State 76

   49 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 104


State 77

   45 Def: Specifier DecList SEMI .

    $default  reduce using rule 45 (Def)


State 78

   47 DecList: Dec COMMA . DecList

    ID  shift, and go to state 45

    VarDec   go to state 53
    DecList  go to state 105
    Dec      go to state 55


State 79

   61 Exp: ID LP . Args RP
   62    | ID LP . RP

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    RP     shift, and go to state 106

    Exp   go to state 107
    Args  go to state 108


State 80

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   59    | MINUS Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    STAR  shift, and go to state 92
    DIV   shift, and go to state 93
    DOT   shift, and go to state 99
    LB    shift, and go to state 100

    $default  reduce using rule 59 (Exp)


State 81

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   60    | NOT Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    DOT  shift, and go to state 99
    LB   shift, and go to state 100

    $default  reduce using rule 60 (Exp)


State 82

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   58    | LP Exp . RP
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    ASSIGNOP  shift, and go to state 96
    RELOP     shift, and go to state 97
    DOT       shift, and go to state 99
    RP        shift, and go to state 109
    LB        shift, and go to state 100


State 83

   38 Stmt: IF LP . Exp RP Stmt
   39     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 110


State 84

   40 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 111


State 85
